--- a/student-records-app/docker-compose.yml
+++ b/student-records-app/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - "3000:80"
     depends_on:
       - backend
+    env_file:
+      - Frontend.env
 
   backend:
     build:
@@ -16,12 +18,27 @@ services:
       dockerfile: Dockerfile.backend
     ports:
       - "5001:5000"
+    depends_on:
+      - mongo
     environment:
       - MONGO_URI=${MONGO_URI}
       - FLASK_ENV=development
       - FLASK_APP=app.py
     env_file:
-      - .env
+      - Backend.env
+
+  mongo:
+    image: mongo
+    container_name: mongodb
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo_data:/data/db
+    environment:
+      MONGO_INITDB_DATABASE: studentdb
+
+volumes:
+  mongo_data:
 
 networks:
   default:
