--- a/student-records-app/src/Backend.env
+++ b/student-records-app/src/Backend.env
@@ -1,3 +1,3 @@
-MONGO_URI="mongodb+srv://samijaffri01:6XjmdnygdfRrD8dF@cluster0.fgfo7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI=mongodb+srv://samijaffri01:6XjmdnygdfRrD8dF@cluster0.fgfo7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 FLASK_ENV=development
 FLASK_APP=app.py 
