--- a/student-records-app/.env
+++ b/student-records-app/.env
@@ -1,3 +1,6 @@
+# MongoDB Connection URI
 MONGO_URI=mongodb+srv://samijaffri01:6XjmdnygdfRrD8dF@cluster0.fgfo7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+# Flask environment variables (optional, based on your needs)
+FLASK_APP=src/app.py
 FLASK_ENV=development
-FLASK_APP=app.py 
